added route management with react-router, created Home, Post, NotFound pages and the Layout component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+@theme {
+  --color-primary: #1e2939;
+  --color-secondary: #101828;
+}
+
 .container {
   @apply mx-auto px-4 md:px-6;
 }
